--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Branch </title>
+    <title>Branch Alterada </title>
 </head>
 <body>
 <div>
   <br> <strong> Eu estou testando bloqueio de Branch </strong>
+ </br>
+ <br> <strong> Primeiro commit deu certo, porem deveria ter dado errado devido o bloqueio </strong>
  </br>
 </div>
 </body>
