--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <div>
   <br> <strong> Eu estou testando bloqueio de Branch </strong>
  </br>
- <br> <strong> Primeiro commit deu certo, porem deveria ter dado errado devido o bloqueio </strong>
- <a href="https://www.linkedin.com/in/renatolemosmendes/">Clique aqui para visitar Perfil linkedin</a>
+ <br> <strong> Primeiro commit deu certo, porem deveria ter dado errado devido o bloqueio </strong> 
  </br>
+ <br> <a href="https://www.linkedin.com/in/renatolemosmendes/">Clique aqui para visitar Perfil linkedin</a>
+</br>
 </div>
 </body>
 </html>
