Adiciona a tag img

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
  </br>
  <br> <a href="https://www.linkedin.com/in/renatolemosmendes/">Clique aqui para visitar Perfil linkedin</a>
 </br>
+<img src="https://f.i.uol.com.br/fotografia/2022/08/18/166082384262fe29223b9c8_1660823842_3x2_md.jpg" alt="">
 </div>
 </body>
 </html>
